<resources>
    <string name="app_name">Quiz</string>
    <string name="firebase_url">https://cappacitate2015quiz.firebaseio.com/</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_quiz">Cappacitate 2015 - Quiz</string>
    <string name="your_username">Usuario</string>
    <string name="username_field">Usuario: </string>
    <string name="go_to_quiz">Empezar</string>
    <string name="text_quiz_top">Hola %1$s! Responde por favor</string>
    <string name="thanks">Gracias por responder!</string>
    <string name="vote_again">Puedes responder nuevamente!</string>
    <string name="give_us_comments">Escribe un comentario...</string>
    <string name="send_comment">Enviar comentario!</string>
    <string name="option_a">A</string>
    <string name="option_b">B</string>
    <string name="option_c">C</string>
    <string name="option_d">D</string>
    <string name="option_e">E</string>
</resources>
